--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,23 @@
   color: #61dafb;
 }
 
+.client-table-div {
+  display : "flex";
+  justify-content: center;
+  width: 100%;
+}
+
+.client-table {
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid black;
+  text-align: left;
+}
+
+th, td {
+  border: 1px solid black;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +52,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} 
